--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-a11y-slider": "^1.3.2",
+    "react-native-numeric-input": "^1.9.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0",
-    "react-native-udp": "^4.1.7"
+    "react-native-udp": "^4.1.7",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
