--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.71.8",
     "react-native-a11y-slider": "^1.3.2",
     "react-native-numeric-input": "^1.9.1",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0",
